# ws2812b

./: README.md
firmware/: .gdbinit  Cargo.toml  README.md
firmware/src/: main.rs
logcat/: Cargo.toml  README.md
logcat/src/: main.rs
sequence/: Cargo.toml  README.md
sequence/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
