[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "WS2812B demo application"
license = "MIT OR Apache-2.0"
name = "firmware"
repository = "https://github.com/japaric/ws2812"
version = "0.1.0"

[dependencies]
aligned = "0.1.1"
cortex-m = "0.3.0"
cortex-m-rtfm = "0.2.0"

[dependencies.blue-pill]
git = "https://github.com/japaric/blue-pill"
rev = "2b7d5c56b25f4efad6c7c40042f884cbecb47c0b"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.0"

[dependencies.shared]
optional = false
path = "../shared"

[profile.release]
debug = true
lto = true
